# infrastructure

./: .gitignore  .gitmodules  Makefile  README.md
apps/dockge/: compose.yml
apps/landing-page/: compose.yml
apps/landing-page/www/: index.html
apps/traefik/: compose.yml  traefik.yml
services/dockge/: compose.yml
services/idm/: .gitignore  compose.yml  server.toml  sync.sh
services/landing/: Dockerfile  compose.yml
services/monitoring/: compose.yml
services/photos/: .gitignore  compose.yml
services/photos/historian/historian/: main.py
services/printers/: .gitignore  compose.yml
services/printers/paperboy/: Dockerfile  pyproject.toml
services/printers/paperboy/paperboy/: main.py  media.py  printer.py
services/printers/paperboy/paperboy/handlers/: error.py  print.py  start.py
services/router/: compose.yml  traefik.yml
services/wiki/: compose.yml
