[project]
authors = [
    {name = "Sammy Hajhamid", email = "sh@pepsi.pw"},
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "python-telegram-bot[callback-data]<22.0,>=21.10",
    "python-dotenv<2.0.0,>=1.0.1",
    "pycups<3.0.0,>=2.0.4",
    "pillow<12.0.0,>=11.1.0",
]
name = "paperboy"
version = "0.1.0"
description = ""
readme = "README.md"
